动态添加textview 图片导出类型  选择类型已完善

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity android:name="com.example.zyl.activity.writes.WeekWrite" />
         <activity android:name=".activity.PhotoSelectActivity" />
         <activity android:name=".activity.TextActivity" />
+        <activity android:name=".activity.ImageOutputActivity" />
     </application>
 
 </manifest>
